--- a/templates/faq.gohtml
+++ b/templates/faq.gohtml
@@ -1,3 +1,5 @@
+{{template "header" .}}
+
 <h1>FAQ</h1>
 <p>Q: Is there a free version?</p>
 <p>A: Nope</p></br>
@@ -11,6 +13,7 @@
     {{end}}
 </ul>
 
+{{template "footer" .}}
 
 
 {{define "qa"}}
