--- a/templates/home.gohtml
+++ b/templates/home.gohtml
@@ -1,10 +1,6 @@
+{{template "header" .}}
+
 <h1>Welcome to my awesome site!</h1>
-{{template "lorem"}}
-{{template "lorem"}}
-{{template "lorem"}}
 
 
-
-{{define "lorem"}}
-<p>lorem lorem lorem2</p>
-{{end}}
+{{template "footer" .}}
