--- a/templates/contact.gohtml
+++ b/templates/contact.gohtml
@@ -1,2 +1,7 @@
+{{template "header" .}}
+
+
 <h1>Contact Page</h1>
 <p>Get in touch with me! <a href="mailto:kiet123pascal@gmail.com">kiet123pascal@gmail.com</a></p>
+
+{{template "footer" .}}
