--- a/templates/contact.gohtml
+++ b/templates/contact.gohtml
@@ -1,7 +1,7 @@
 {{template "header" .}}
 
-
-<h1>Contact Page</h1>
-<p>Get in touch with me! <a href="mailto:kiet123pascal@gmail.com">kiet123pascal@gmail.com</a></p>
+<div class="px-6">
+<h1 class="py-4 text-4xl semibold tracking-tight">Contact Page</h1>
+<p class="text-gray-800">Get in touch with me! <a href="mailto:kiet123pascal@gmail.com">kiet123pascal@gmail.com</a></p>
 
 {{template "footer" .}}
