--- a/templates/faq.gohtml
+++ b/templates/faq.gohtml
@@ -1,22 +1,20 @@
 {{template "header" .}}
 
-<h1>FAQ</h1>
-<p>Q: Is there a free version?</p>
-<p>A: Nope</p></br>
-<p>Q: How do I contact support?</p>
-<p>A: Email us - <a href="mailto:kiet123pascal@gmail.com">kiet123pascal@gmail.com</a></p>
-
-
-<ul>
+<div class="px-6">
+<h1 class="py-4 text-4xl semibold tracking-tight">FAQ Page</h1>
+<ul class="grid grid-cols-2 gap-16">
     {{range .}}
         {{template "qa" .}}
     {{end}}
 </ul>
+</div>
 
 {{template "footer" .}}
 
 
 {{define "qa"}}
-<p>Q: {{.Question}}</p>
-<p>A: {{.Answer}}</p></br>
+<li class="border-t border-indigo-400 py-1 px-2">
+<span class="block text-lg text-gray-800 semibold">Q: {{.Question}}</span>
+<span class="block text-sm text-gray-500">A: {{.Answer}}</span>
+</li>
 {{end}}
