--- a/templates/signin.gohtml
+++ b/templates/signin.gohtml
@@ -4,7 +4,7 @@
     <h1 class="pt-4 pb-8 text-center text-3xl font-bold text-gray-900">
         Start sharing your photos today!
     </h1>
-        <form action="/users" method="post">
+        <form action="/signin" method="post">
             <div class="py-2">
                 <label for="email" class="text-sm font-semibold text-gray-800">Email Adress</label>
                 <input name="email" id="email" type="email" placeholder="example@mail.com" required autocomplete="email" 
@@ -17,11 +17,11 @@
             </div>
             <div class="py-4">
                 <button type="submit" class="w-full py-4 px-2 bg-indigo-600 
-                hover:bg-indigo-700 text-white rounded font-bold text-lg">Sign Up</button>
+                hover:bg-indigo-700 text-white rounded font-bold text-lg">Sign In</button>
             </div>
             <div class="py-2 w-full flex justify-between">
                 <p class="text-xs text-gray-500">
-                    Already have an account? <a class="underline" href="/signin">Sign in</a>
+                    Need an account? <a class="underline" href="/signup">Sign Up</a>
                 </p>
                 <p class="text-xs text-gray-500">
                     <a href="/reset-pw" class="underline">Forgot your password?</a>
